Kafka Sink Connector Modifications
Adding support for Avro, protobuf and different protocol support for kafka sink connector

--- a/mage_ai/data_preparation/templates/data_exporters/streaming/kafka.yaml
+++ b/mage_ai/data_preparation/templates/data_exporters/streaming/kafka.yaml
@@ -3,6 +3,7 @@ bootstrap_server: "localhost:9092"
 topic: topic_name
 api_version: 0.10.2
 
+
 # Uncomment the config below to use SSL config
 # security_protocol: "SSL"
 # ssl_config:
@@ -18,3 +19,8 @@ api_version: 0.10.2
 #   mechanism: "PLAIN"
 #   username: username
 #   password: password
+
+# Uncomment the config below to use protobuf schema to deserialize message
+# serde_config:
+#   serialization_method: PROTOBUF
+#   schema_classpath: "path.to.schema.SchemaClass"
